--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -w",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "lite-server",
-    "build": "tsc -w"
+    "start": "lite-server"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -41,7 +40,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.57.4",
+    "@supabase/supabase-js": "^2.76.1",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -82,7 +81,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.21"
   },
   "description": "**URL**: https://lovable.dev/projects/77723a25-ccf7-4c47-8d86-8efc6f9cab71",
   "main": "eslint.config.js",
